Pricing grid redesign: fix alignment of feature descriptions with badges (#112517)
* Prevent the crossed-out features from moving to the left

* Preserve consistent line breaks by adding hidden badge placeholders

* Update return type

--- a/packages/plans-grid-next/src/components/features-grid/style.scss
+++ b/packages/plans-grid-next/src/components/features-grid/style.scss
@@ -499,6 +499,14 @@
 	}
 }
 
+.plan-features-2023-grid__item-checkmark.is-placeholder {
+	visibility: hidden;
+}
+
+.plan-features-2023-grid__feature-badge.is-placeholder {
+	visibility: hidden;
+}
+
 .plan-features-2023-grid__content {
 	.plan-features-2023-grid__table-bottom {
 		margin-top: 54px;
